[package]
name = "base_token"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs" 

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.0.0"
borsh = "1.5.1"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"]}
near-workspaces = { version = "0.14.1", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
chrono = "0.4.38"
serde = "1.0.210"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
